Fix react property errors in live examples

--- a/docs/docs/components/block-list.mdx
+++ b/docs/docs/components/block-list.mdx
@@ -73,7 +73,7 @@ Choose the most appropriate markup scheme depending on the data you need to disp
 ### Link
 
 <div className="d-example">
-  <div class="block-list">
+  <div className="block-list">
     <a href="#foo" className="block-list__item">Foo</a>
     <a href="#bar" className="block-list__item">Bar</a>
     <a href="#baz" className="block-list__item">Baz</a>
@@ -120,7 +120,7 @@ Choose the most appropriate markup scheme depending on the data you need to disp
 ### Div
 
 <div className="d-example">
-  <div class="block-list">
+  <div className="block-list">
     <div className="block-list__item">Foo</div>
     <div className="block-list__item">Bar</div>
     <div className="block-list__item">Baz</div>
@@ -167,7 +167,7 @@ Choose the most appropriate markup scheme depending on the data you need to disp
 ### Ordered list
 
 <div className="d-example">
-  <ol class="block-list">
+  <ol className="block-list">
     <li className="block-list__item">Foo</li>
     <li className="block-list__item">Bar</li>
     <li className="block-list__item">Baz</li>
@@ -214,7 +214,7 @@ Choose the most appropriate markup scheme depending on the data you need to disp
 ### Unordered list
 
 <div className="d-example">
-  <ul class="block-list">
+  <ul className="block-list">
     <li className="block-list__item">Foo</li>
     <li className="block-list__item">Bar</li>
     <li className="block-list__item">Baz</li>
@@ -263,7 +263,7 @@ Choose the most appropriate markup scheme depending on the data you need to disp
 Add an optional header and/or footer to a block list.
 
 <div className="d-example">
-  <ul class="block-list">
+  <ul className="block-list">
     <li className="block-list__header">This is the header</li>
     <li className="block-list__item">Foo</li>
     <li className="block-list__item">Bar</li>
