--- a/docs/docs/components/breadcrumb.mdx
+++ b/docs/docs/components/breadcrumb.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 A basic helper to render a list of breadcrumb links. A view should set a `breadcrumbs` object which will then be rendered by the base template.
 
 <div className="d-example">
-  <nav class="breadcrumb" aria-label="breadcrumbs">
+  <nav className="breadcrumb" aria-label="breadcrumbs">
     <a href="#foo">foo</a> / <a href="#bar">bar</a> / <a href="#baz" aria-current="page">baz</a>
   </nav>
 </div>
