--- a/docs/docs/components/button-group.mdx
+++ b/docs/docs/components/button-group.mdx
@@ -84,11 +84,11 @@ You can configure this helper using the common helper options, the following opt
 For assistive technology, you must make sure your icons have their own labels which will be announced when the button receives focus.
 
 <div className="d-example">
-  <div class="btn__group">
-    <button class="btn"><i class="icon-align-left"><span class="hide">Text align: left</span></i></button>
-    <button class="btn"><i class="icon-align-center"><span class="hide">Text align: center</span></i></button>
-    <button class="btn"><i class="icon-align-right"><span class="hide">Text align: right</span></i></button>
-    <button class="btn"><i class="icon-align-justify"><span class="hide">Text align: justify</span></i></button>
+  <div className="btn__group">
+    <button className="btn"><i className="icon-align-left"><span className="hide">Text align: left</span></i></button>
+    <button className="btn"><i className="icon-align-center"><span className="hide">Text align: center</span></i></button>
+    <button className="btn"><i className="icon-align-right"><span className="hide">Text align: right</span></i></button>
+    <button className="btn"><i className="icon-align-justify"><span className="hide">Text align: justify</span></i></button>
   </div>
 </div>
 
