--- a/docs/docs/components/flash-message.mdx
+++ b/docs/docs/components/flash-message.mdx
@@ -72,7 +72,7 @@ The icon for a flash message is automatically chosen based on the flash message 
 If you want to disable the ability to close a flash message (useful when you have flash messages in modals, for example), use the dismissable option.
 
 <div className="d-example">
-  <section class="flash flash--error" aria-labelledby="guid-1121414803"><i aria-hidden="true"  class="icon-warning-sign"></i><h2 id="guid-1121414803">This flash cannot be dismissed</h2></section>
+  <section className="flash flash--error" aria-labelledby="guid-1121414803"><i aria-hidden="true"  className="icon-warning-sign"></i><h2 id="guid-1121414803">This flash cannot be dismissed</h2></section>
 </div>
 
 <Tabs
