--- a/docs/docs/components/label.mdx
+++ b/docs/docs/components/label.mdx
@@ -154,7 +154,7 @@ Be careful using link labels as they don’t offer the same visual affordances a
 Adding the `removable` option to the Twig helper adds `data-action="remove" data-action-target="this"` attributes to the markup, which can use used as a hook for your own javascript.
 
 <div className="d-example">
-  <span class="label label--removable"><span class="label__text">My Label</span><button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove My Label</span></i></button></span>
+  <span className="label label--removable"><span className="label__text">My Label</span><button type="button" data-action="remove" data-action-target="this" className="btn remove-button"><i className="icon-remove-sign"><span className="hide">Remove My Label</span></i></button></span>
 </div>
 
 <Tabs
