--- a/docs/docs/components/link.mdx
+++ b/docs/docs/components/link.mdx
@@ -58,7 +58,7 @@ You can configure this helper using the common helper options, the following opt
 ### Before the label
 
 <div className="d-example">
-  <a href="#add"><i aria-hidden="true" class="icon-plus"></i>&nbsp;Add</a>
+  <a href="#add"><i aria-hidden="true" className="icon-plus"></i>&nbsp;Add</a>
 </div>
 
 <Tabs
@@ -94,7 +94,7 @@ You can configure this helper using the common helper options, the following opt
 ### After the label
 
 <div className="d-example">
-  <a href="#view">View Live <i aria-hidden="true" class="icon-external-link"></i></a>
+  <a href="#view">View Live <i aria-hidden="true" className="icon-external-link"></i></a>
 </div>
 
 <Tabs
@@ -120,7 +120,7 @@ You can configure this helper using the common helper options, the following opt
 <TabItem value="html">
 
 ```html
-<a href="#view">View Live <i aria-hidden="true" class="icon-external-link"></i></a>
+<a href="#view">View Live <i aria-hidden="true" className="icon-external-link"></i></a>
 ```
 
 </TabItem>
