--- a/docs/docs/components/loading-spinner.mdx
+++ b/docs/docs/components/loading-spinner.mdx
@@ -12,7 +12,7 @@ Give feedback to the user that something is happening or that information is bei
 Adding the hide class will allow you to place the loading markup in the DOM on pageload for you to toggle with javascript.
 
 <div className="d-example">
-  <span class="loading"><i>Loading...</i></span>
+  <span className="loading"><i>Loading...</i></span>
 </div>
 
 ## Basic usage
@@ -48,8 +48,8 @@ You can configure this helper using the common helper options.
 ## Centering within a container
 
 <div className="d-example">
-  <div class="loading-block">
-    <span class="loading"><i>Loading...</i></span>
+  <div className="loading-block">
+    <span className="loading"><i>Loading...</i></span>
   </div>
 </div>
 
@@ -90,8 +90,8 @@ You can configure this helper using the common helper options.
 When a spinner is used to indicate a large section of an interface is still loading it may be more you can use the large spinner to be more obvious.
 
 <div className="d-example">
-  <div class="loading-block">
-    <span class="loading loading--large"><i>Loading...</i></span>
+  <div className="loading-block">
+    <span className="loading loading--large"><i>Loading...</i></span>
   </div>
 </div>
 
@@ -131,9 +131,9 @@ When a spinner is used to indicate a large section of an interface is still load
 A line of text can be included to tell the user what’s happening.
 
 <div className="d-example">
-  <div class="loading-block">
-    <span class="loading loading--large"><i>Loading...</i></span>
-    <span class="loading-block__message">Loading your cases...</span>
+  <div className="loading-block">
+    <span className="loading loading--large"><i>Loading...</i></span>
+    <span className="loading-block__message">Loading your cases...</span>
   </div>
 </div>
 
