--- a/docs/docs/components/metadata.mdx
+++ b/docs/docs/components/metadata.mdx
@@ -10,10 +10,10 @@ import TabItem from '@theme/TabItem';
 Provides a simple way to mark up key/value information provided by a Twig hash or JSON object.
 
 <div className="d-example">
-  <dl class="metadata"><dt class="metadata__key">File</dt>
-  <dd class="metadata__value">true_lies.avi</dd><dt class="metadata__key">Size</dt>
-  <dd class="metadata__value">1.2 Gb</dd><dt class="metadata__key">Type</dt>
-  <dd class="metadata__value">Video</dd></dl>
+  <dl className="metadata"><dt className="metadata__key">File</dt>
+  <dd className="metadata__value">true_lies.avi</dd><dt className="metadata__key">Size</dt>
+  <dd className="metadata__value">1.2 Gb</dd><dt className="metadata__key">Type</dt>
+  <dd className="metadata__value">Video</dd></dl>
 </div>
 
 ## Basic usage
