--- a/docs/docs/components/progress-bar.mdx
+++ b/docs/docs/components/progress-bar.mdx
@@ -211,7 +211,7 @@ Use the common state variation classes to help communicate progress, or lack of 
 ### Warning
 
 <div className="d-example">
-  <div class="progress">
+  <div className="progress">
   <div 
     aria-label="File upload progress" 
     role="progressbar" 
@@ -219,7 +219,7 @@ Use the common state variation classes to help communicate progress, or lack of 
     aria-valuemin="0" 
     aria-valuemax="100" 
     style={{'width': '33%'}} 
-    class="progress-bar progress-bar--warning"
+    className="progress-bar progress-bar--warning"
   >33% Having trouble connecting&hellip;</div>
 </div>
 </div>
@@ -328,7 +328,7 @@ Use the common state variation classes to help communicate progress, or lack of 
 ### Success
 
 <div className="d-example">
-  <div class="progress">
+  <div className="progress">
     <div 
       aria-label="File upload progress" 
       role="progressbar" 
@@ -336,9 +336,9 @@ Use the common state variation classes to help communicate progress, or lack of 
       aria-valuemin="0" 
       aria-valuemax="100" 
       style={{'width': '100%'}}  
-      class="progress-bar progress-bar--success"
+      className="progress-bar progress-bar--success"
     >
-      <span class="hide">100%</span> Uploaded <i aria-hidden="true"  class="icon-ok"></i>
+      <span className="hide">100%</span> Uploaded <i aria-hidden="true" className="icon-ok"></i>
     </div>
   </div>
 </div>
