--- a/docs/docs/components/tooltips.mdx
+++ b/docs/docs/components/tooltips.mdx
@@ -82,7 +82,7 @@ The tooltip will not be read by screenreaders and therefore this pattern should 
 :::
 
 <div className="d-example">
-  <div data-tippy-content="Can’t touch this" tabindex="0" className="u-display-inline-block">
+  <div data-tippy-content="Can’t touch this" tabIndex="0" className="u-display-inline-block">
     <button disabled className="btn is-disabled">Disabled Button</button>
   </div>
 </div>
