--- a/docs/docs/forms/date.mdx
+++ b/docs/docs/forms/date.mdx
@@ -33,7 +33,7 @@ Then pass the `'data-pulsar-datepicker': 'true'` option to your date helper.
 
 <div className="d-example">
   <div className="form__group">
-    <label for="date-1" className="control__label">Start date</label>
+    <label htmlFor="date-1" className="control__label">Start date</label>
     <div className="controls">
       <div className="input-group has-btn-appended">
         <input data-pulsar-datepicker="true" id="date-1" name="date-1" placeholder="dd/mm/yyyy" data-pulsar-datepicker-trigger="guid-232383307" type="text" className="form__control" />
@@ -102,7 +102,7 @@ Use the `format` attribute to change between `default` (UK), `US` and `reverse` 
 
 <div className="d-example">
   <div className="form__group">
-    <label for="date-2" className="control__label">Start date</label>
+    <label htmlFor="date-2" className="control__label">Start date</label>
     <div className="controls">
       <div className="input-group has-btn-appended">
         <input data-pulsar-datepicker="true" id="date-2" name="date-2" placeholder="dd/mm/yyyy" data-pulsar-datepicker-format="US" data-pulsar-datepicker-trigger="guid-774268350" type="text" className="form__control" />
@@ -141,7 +141,7 @@ Use the `format` attribute to change between `default` (UK), `US` and `reverse` 
 
 ```html
 <div class="form__group">
-  <label for="date-2" class="control__label">Start date</label>
+  <label htmlFor="date-2" class="control__label">Start date</label>
   <div class="controls">
     <div class="input-group has-btn-appended">
       <input data-pulsar-datepicker="true" id="date-2" name="date-2" placeholder="dd/mm/yyyy" data-pulsar-datepicker-format="US" data-pulsar-datepicker-trigger="guid-774268350" type="text" class="form__control" />
