--- a/docs/docs/forms/fieldset.mdx
+++ b/docs/docs/forms/fieldset.mdx
@@ -40,7 +40,7 @@ Give fieldsets a descriptive legend to break your form into logical sections.
   <fieldset>
     <legend className="legend">I am legend</legend>
     <div className="form__group">
-      <label for="field-1" className="control__label">Example field</label>
+      <label htmlFor="field-1" className="control__label">Example field</label>
       <div className="controls">
         <input id="field-1" name="field-1" type="text" className="form__control" />
       </div>
