--- a/docs/docs/forms/file.mdx
+++ b/docs/docs/forms/file.mdx
@@ -11,7 +11,7 @@ Generate a file input field.
 
 <div className="d-example">
   <div className="form__group">
-    <label for="guid-125910704" className="control__label">Attach file</label>
+    <label htmlFor="guid-125910704" className="control__label">Attach file</label>
     <div className="controls">
       <input id="guid-125910704" name="file-1" type="file"  className="form__control file" />
     </div>
