--- a/docs/docs/forms/password.mdx
+++ b/docs/docs/forms/password.mdx
@@ -11,7 +11,7 @@ Generates a password input field.
 
 <div className="d-example">
   <div className="form__group">
-    <label for="password-1" className="control__label">My label</label>
+    <label htmlFor="password-1" className="control__label">My label</label>
     <div className="controls">
       <input id="password-1" name="password-1" type="password"  className="form__control" />
     </div>
