--- a/docs/docs/forms/time.mdx
+++ b/docs/docs/forms/time.mdx
@@ -11,7 +11,7 @@ Generate a text input field which will show a time picker overlay when focused.
 
 <div className="d-example">
   <div className="form__group">
-    <label for="guid-421090519" className="control__label">Start time</label>
+    <label htmlFor="guid-421090519" className="control__label">Start time</label>
     <div className="controls">
       <input id="guid-421090519" name="time-1" placeholder="hh:mm" data-timepicker="true" type="text" className="form__control" />
     </div>
