--- a/docs/docs/guides/accessibility.mdx
+++ b/docs/docs/guides/accessibility.mdx
@@ -20,7 +20,7 @@ It is intended that Pulsar is compliant with the Web Content Accessibility Guide
 
 ## Reporting accessibility problems with Pulsar
 
-The Pulsar team are always looking to improve the accessibility of the design system. If you find any problems that are not listed on this page or think any part of Pulsar is not meeting accessiblity requirements, email the project lead at <a mailto="paul.stanton@jadu.net">paul.stanton@jadu.net</a>.
+The Pulsar team are always looking to improve the accessibility of the design system. If you find any problems that are not listed on this page or think any part of Pulsar is not meeting accessiblity requirements, email the project lead at paul.stanton@jadu.net.
 
 ## Non-accessible content
 
