--- a/docs/docs/guides/browsers.mdx
+++ b/docs/docs/guides/browsers.mdx
@@ -21,7 +21,7 @@ Browsers not listed may still work well, and it should be noted that this is not
     </thead>
     <tbody>
     <tr>
-        <td rowspan="5">Windows</td>
+        <td rowSpan="5">Windows</td>
     </tr>
     <tr>
         <td>Internet Explorer 11</td>
@@ -36,7 +36,7 @@ Browsers not listed may still work well, and it should be noted that this is not
         <td>Mozilla Firefox (latest versions)</td>
     </tr>
     <tr>
-        <td rowspan="3">MacOS</td>
+        <td rowSpan="3">MacOS</td>
         <td>Safari 12+</td>
     </tr>
     <tr>
@@ -46,14 +46,14 @@ Browsers not listed may still work well, and it should be noted that this is not
         <td>Mozilla Firefox (latest versions)</td>
     </tr>
     <tr>
-        <td rowspan="2">iOS</td>
+        <td rowSpan="2">iOS</td>
         <td>Mobile Safari (latest versions)</td>
     </tr>
     <tr>
         <td>Google Chrome (latest versions)</td>
     </tr>
     <tr>
-        <td rowspan="2">Android</td>
+        <td rowSpan="2">Android</td>
         <td>Google Chrome (latest versions)</td>
     </tr>
     <tr>
