--- a/docs/docs/guides/colour-and-state.mdx
+++ b/docs/docs/guides/colour-and-state.mdx
@@ -145,7 +145,7 @@ The state of a ‘thing’ can be indicated by textual labels, and modified by i
 
 Interactive controls which _modify_ a state should, in most cases, use a verb:
 
-<div class="d-example">
+<div className="d-example">
   <button className="btn">Lock</button> <button className="btn btn--inverse">Unlock</button> 
   <br /><br />
   <button className="btn btn--primary">Show</button> <button className="btn">Hide</button> 
@@ -155,7 +155,7 @@ Interactive controls which _modify_ a state should, in most cases, use a verb:
 
 Labels which _indicate_ the current state should use past-participles or adjectives:
 
-<div class="d-example">
+<div className="d-example">
   <span className="label label--inverse">locked</span> <span className="label">unlocked</span> 
   <br /><br />
   <span className="label label--success">visible</span> <span className="label label--danger">hidden</span> 
@@ -169,7 +169,7 @@ Note the careful choice of terms in the examples above for the ‘unpublish’ a
 
 When using iconography there may be the opportunity to use different icons to reflect the state and action and they may often appear together in the same interface.
 
-<div class="d-example">
+<div className="d-example">
   State: <span className="label label--inverse"><i className="icon-lock"></i> locked</span>
   <br /><br />
   Action: <button className="btn"><i className="icon-unlock"></i> Unlock</button>
