--- a/docs/docs/guides/design-tokens.mdx
+++ b/docs/docs/guides/design-tokens.mdx
@@ -12,7 +12,7 @@ See the [colour and state](guides/colour-and-state.mdx) for information on the c
 
 ## Fonts
 
-<table class="table table--full">
+<table className="table table--full">
     <thead>
         <tr>
             <th scope="col">Variable</th>
@@ -69,7 +69,7 @@ See the [colour and state](guides/colour-and-state.mdx) for information on the c
 
 ## Spacing
 
-<table class="table table--full">
+<table className="table table--full">
     <thead>
         <tr>
             <th scope="col">Variable</th>
@@ -86,7 +86,7 @@ See the [colour and state](guides/colour-and-state.mdx) for information on the c
 
 ## Margins
 
-<table class="table table--full">
+<table className="table table--full">
     <thead>
         <tr>
             <th scope="col">Variable</th>
@@ -127,7 +127,7 @@ See the [colour and state](guides/colour-and-state.mdx) for information on the c
 
 ## Padding
 
-<table class="table table--full">
+<table className="table table--full">
     <thead>
         <tr>
             <th scope="col">Variable</th>
@@ -168,7 +168,7 @@ See the [colour and state](guides/colour-and-state.mdx) for information on the c
 
 ## Responsive breakpoints
 
-<table class="table table--full">
+<table className="table table--full">
     <thead>
         <tr>
             <th scope="col">Variable</th>
@@ -209,7 +209,7 @@ See the [colour and state](guides/colour-and-state.mdx) for information on the c
 
 ## Borders
 
-<table class="table table--full">
+<table className="table table--full">
     <thead>
         <tr>
             <th scope="col">Variable</th>
@@ -230,7 +230,7 @@ See the [colour and state](guides/colour-and-state.mdx) for information on the c
 
 ## Z-index
 
-<table class="table table--full">
+<table className="table table--full">
     <thead>
         <tr>
             <th scope="col">Variable</th>
