--- a/docs/docs/components/media.mdx
+++ b/docs/docs/components/media.mdx
@@ -10,11 +10,11 @@ import TabItem from '@theme/TabItem';
 The media object is, typically, an image on the left with descriptive content on the right. They can be used standalone, stacked, or as part of other components like block lists.
 
 <div className="d-example">
-  <div class="media">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/48px-Octicons-mark-github.svg.png" alt="GitHub logo" class="media__image" />
-    <div class="media__body">
+  <div className="media">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/48px-Octicons-mark-github.svg.png" alt="GitHub logo" className="media__image" />
+    <div className="media__body">
       <p>Title</p>
-      <span class="small-type">Description</span>
+      <span className="small-type">Description</span>
     </div>
   </div>
 </div>
@@ -79,11 +79,11 @@ You can configure this helper using the common helper options, the following opt
 Supply an icon instead of image to choose from the hundreds of icons available within Pulsar. Use in conjunction with the optional `icon_colour` to improve how they look or to maintain branding for brand icons.
 
 <div className="d-example">
-  <div class="media">
-    <i style={{color: '#e52d27'}} aria-hidden="true" class="icon-youtube-square media__image"></i>
-    <div class="media__body">
+  <div className="media">
+    <i style={{color: '#e52d27'}} aria-hidden="true" className="icon-youtube-square media__image"></i>
+    <div className="media__body">
       <p>YouTube</p>
-      <span class="small-type">Upload video to YouTube</span>
+      <span className="small-type">Upload video to YouTube</span>
     </div>
   </div>
 </div>
@@ -127,36 +127,36 @@ Supply an icon instead of image to choose from the hundreds of icons available w
 You can place an action such as a button or status indicator depending on the needs of your user interface.
 
 <div className="d-example">
-<div class="media">
-  <i style={{color: '#0084b4'}} aria-hidden="true" class="icon-twitter-square media__image"></i>
-  <div class="media__body">
-    <span class="pull-right">
-      <button data-tippy-content="Remove this item" data-tippy-placement="right" type="button" data-action="remove" data-action-target="#example"  class="btn  remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></button>
+<div className="media">
+  <i style={{color: '#0084b4'}} aria-hidden="true" className="icon-twitter-square media__image"></i>
+  <div className="media__body">
+    <span className="pull-right">
+      <button data-tippy-content="Remove this item" data-tippy-placement="right" type="button" data-action="remove" data-action-target="#example"  className="btn  remove-button"><i className="icon-remove-sign"><span className="hide">Remove</span></i></button>
     </span>
     <p>Twitter</p>
-    <span class="small-type">Automatically push content to your timeline</span>
+    <span className="small-type">Automatically push content to your timeline</span>
   </div>
 </div>
-<div class="media">
-  <i style={{color: '#0084b4'}} aria-hidden="true" class="icon-twitter-square media__image"></i>
-  <div class="media__body">
-    <span class="pull-right">
-      <button  class="btn btn--small btn--outline">disconnect</button>
+<div className="media">
+  <i style={{color: '#0084b4'}} aria-hidden="true" className="icon-twitter-square media__image"></i>
+  <div className="media__body">
+    <span className="pull-right">
+      <button  className="btn btn--small btn--outline">disconnect</button>
     </span>
     <p>Twitter</p>
-    <span class="small-type">Automatically push content to your timeline</span>
+    <span className="small-type">Automatically push content to your timeline</span>
   </div>
 </div>
-<div class="media">
-  <i style={{color: '#0084b4'}} aria-hidden="true" class="icon-twitter-square media__image"></i>
-  <div class="media__body">
-    <span class="pull-right">
-      <span data-tippy-placement="top" data-tippy-content="online"  class="status is-online">
-        <span class="hide">online</span>
+<div className="media">
+  <i style={{color: '#0084b4'}} aria-hidden="true" className="icon-twitter-square media__image"></i>
+  <div className="media__body">
+    <span className="pull-right">
+      <span data-tippy-placement="top" data-tippy-content="online"  className="status is-online">
+        <span className="hide">online</span>
       </span>
     </span>
     <p>Twitter</p>
-    <span class="small-type">Automatically push content to your timeline</span>
+    <span className="small-type">Automatically push content to your timeline</span>
   </div>
 </div>
 </div>
