--- a/docs/docs/components/pagination.mdx
+++ b/docs/docs/components/pagination.mdx
@@ -19,10 +19,10 @@ Pagination should not be displayed at all if there aren't enough records to requ
 
 The previous, next, first and last links should only be shown when a previous or next page exist. For example, the previous and first link should not be shown when the user is on the first page. Similarly, the next and last link should not be shown when the user is on the last page.
 
-<div class="d-example">
-  <nav aria-label="Table pagination" class="pagination">
-    <ul class="pull-left">
-      <li class="selected"><a href="#1" aria-current="true" aria-label="Current page, page 1">1</a></li>
+<div className="d-example">
+  <nav aria-label="Table pagination" className="pagination">
+    <ul className="pull-left">
+      <li className="selected"><a href="#1" aria-current="true" aria-label="Current page, page 1">1</a></li>
       <li><a href="#" aria-label="page 2">2</a></li>
       <li><a href="#" aria-label="page 3">3</a></li>
       <li><a href="#" aria-label="page 4">4</a></li>
@@ -34,9 +34,9 @@ The previous, next, first and last links should only be shown when a previous or
 </div>
 
 ```html
-<nav aria-label="Table pagination" class="pagination">
-  <ul class="pull-left">
-    <li class="selected"><a href="#1" aria-current="true" aria-label="Current page, page 1">1</a></li>
+<nav aria-label="Table pagination" className="pagination">
+  <ul className="pull-left">
+    <li className="selected"><a href="#1" aria-current="true" aria-label="Current page, page 1">1</a></li>
     <li><a href="#" aria-label="page 2">2</a></li>
     <li><a href="#" aria-label="page 3">3</a></li>
     <li><a href="#" aria-label="page 4">4</a></li>
@@ -51,13 +51,13 @@ The previous, next, first and last links should only be shown when a previous or
 
 Note the first, previous, next and last links are visible.
 
-<div class="d-example">
-  <nav aria-label="Table pagination" class="pagination">
-    <ul class="pull-left">
+<div className="d-example">
+  <nav aria-label="Table pagination" className="pagination">
+    <ul className="pull-left">
         <li><a href="#" aria-label="first page">First</a></li>
         <li><a href="#" aria-label="previous page">Previous</a></li>
         <li><a href="#" aria-label="page 1">1</a></li>
-        <li class="selected"><a href="#" aria-current="true" aria-label="Current page, page 2">2</a></li>
+        <li className="selected"><a href="#" aria-current="true" aria-label="Current page, page 2">2</a></li>
         <li><a href="#" aria-label="page 3">3</a></li>
         <li><a href="#" aria-label="page 4">4</a></li>
         <li><a href="#" aria-label="page 5">5</a></li>
@@ -68,12 +68,12 @@ Note the first, previous, next and last links are visible.
 </div>
 
 ```html
-<nav aria-label="Table pagination" class="pagination">
-  <ul class="pull-left">
+<nav aria-label="Table pagination" className="pagination">
+  <ul className="pull-left">
     <li><a href="#" aria-label="first page">First</a></li>
     <li><a href="#" aria-label="previous page">Previous</a></li>
     <li><a href="#" aria-label="page 1">1</a></li>
-    <li class="selected"><a href="#" aria-current="true" aria-label="Current page, page 2">2</a></li>
+    <li className="selected"><a href="#" aria-current="true" aria-label="Current page, page 2">2</a></li>
     <li><a href="#" aria-label="page 3">3</a></li>
     <li><a href="#" aria-label="page 4">4</a></li>
     <li><a href="#" aria-label="page 5">5</a></li>
@@ -87,30 +87,30 @@ Note the first, previous, next and last links are visible.
 
 The next and last link should not be shown when the user is on the last page.
 
-<div class="d-example">
-  <nav aria-label="Table pagination" class="pagination">
-    <ul class="pull-left">
+<div className="d-example">
+  <nav aria-label="Table pagination" className="pagination">
+    <ul className="pull-left">
       <li><a href="#" aria-label="first page">First</a></li>
       <li><a href="#" aria-label="previous page">Previous</a></li>
       <li><a href="#" aria-label="page 1">1</a></li>
       <li><a href="#" aria-label="page 2">2</a></li>
       <li><a href="#" aria-label="page 3">3</a></li>
       <li><a href="#" aria-label="page 4">4</a></li>
-      <li class="selected"><a href="#" aria-current="true" aria-label="Current page, page 5">5</a></li>
+      <li className="selected"><a href="#" aria-current="true" aria-label="Current page, page 5">5</a></li>
     </ul>
   </nav>
 </div>
 
 ```html
-<nav aria-label="Table pagination" class="pagination">
-  <ul class="pull-left">
+<nav aria-label="Table pagination" className="pagination">
+  <ul className="pull-left">
     <li><a href="#" aria-label="first page">First</a></li>
     <li><a href="#" aria-label="previous page">Previous</a></li>
     <li><a href="#" aria-label="page 1">1</a></li>
     <li><a href="#" aria-label="page 2">2</a></li>
     <li><a href="#" aria-label="page 3">3</a></li>
     <li><a href="#" aria-label="page 4">4</a></li>
-    <li class="selected"><a href="#" aria-current="true" aria-label="Current page, page 5">5</a></li>
+    <li className="selected"><a href="#" aria-current="true" aria-label="Current page, page 5">5</a></li>
   </ul>
 </nav>
 ```
