--- a/docs/docs/components/panel.mdx
+++ b/docs/docs/components/panel.mdx
@@ -10,10 +10,10 @@ import TabItem from '@theme/TabItem';
 Display important information in a prominent container.
 
 <div className="d-example">
-  <section class="panel" aria-labelledby="guid-998724450">
-    <i aria-hidden="true"  class="icon-info-sign panel__icon"></i>
-    <h2 class="panel__title" id="guid-998724450">In West Philadelphia born and raised</h2>
-    <div class="panel__body">In the playground was where I spent most of my days.</div>
+  <section className="panel" aria-labelledby="guid-998724450">
+    <i aria-hidden="true"  className="icon-info-sign panel__icon"></i>
+    <h2 className="panel__title" id="guid-998724450">In West Philadelphia born and raised</h2>
+    <div className="panel__body">In the playground was where I spent most of my days.</div>
   </section>
 </div>
 
