--- a/docs/docs/forms/choice.mdx
+++ b/docs/docs/forms/choice.mdx
@@ -10,7 +10,27 @@ import TabItem from '@theme/TabItem';
 Displayed as a question with multiple answers, each of which has its own label and can allow either singular (checkboxes) or multiple (radios) choice.
 
 <div className="d-example">
-  <fieldset id="choice-a1" className="form__group form-choice"><legend className="control__label">Assign blame to</legend><div className="controls"><label className="control__label"><input name="choice-a1" value="sun" type="radio" className="form__control radio" /><span className="form-choice__label">Sunshine</span></label><label className="control__label"><input name="choice-a1" value="moon" type="radio" className="form__control radio" /><span className="form-choice__label">Moonlight</span></label><label className="control__label"><input name="choice-a1" value="good" type="radio" className="form__control radio" /><span className="form-choice__label">Good times</span></label><label className="control__label"><input name="choice-a1" value="boogie" type="radio" className="form__control radio" /><span className="form-choice__label">Boogie</span></label></div></fieldset>
+  <fieldset id="choice-a1" className="form__group form-choice">
+    <legend className="control__label">Assign blame to</legend>
+    <div className="controls">
+      <label className="control__label">
+        <input name="choice-a1" value="sun" type="radio" className="form__control radio" />
+        <span className="form-choice__label">Sunshine</span>
+      </label>
+      <label className="control__label">
+        <input name="choice-a1" value="moon" type="radio" className="form__control radio" />
+        <span className="form-choice__label">Moonlight</span>
+      </label>
+      <label className="control__label">
+        <input name="choice-a1" value="good" type="radio" className="form__control radio" />
+        <span className="form-choice__label">Good times</span>
+      </label>
+      <label className="control__label">
+        <input name="choice-a1" value="boogie" type="radio" className="form__control radio" />
+        <span className="form-choice__label">Boogie</span>
+      </label>
+    </div>
+  </fieldset>
 </div>
 
 ## Basic usage
@@ -34,7 +54,7 @@ Displayed as a question with multiple answers, each of which has its own label a
       {
         'label': 'Sunshine',
         'name': 'choice-a1',
-        'value': 'sun'
+        'value': 'sun' 
       },
       {
         'label': 'Moonlight',
@@ -64,16 +84,20 @@ Displayed as a question with multiple answers, each of which has its own label a
   <legend class="control__label">Assign blame to</legend>
   <div class="controls">
     <label class="control__label">
-      <input name="choice-a1" value="sun" type="radio" class="form__control radio" /><span class="form-choice__label">Sunshine</span>
+      <input name="choice-a1" value="sun" type="radio" class="form__control radio" />
+      <span class="form-choice__label">Sunshine</span>
     </label>
     <label class="control__label">
-      <input name="choice-a1" value="moon" type="radio" class="form__control radio" /><span class="form-choice__label">Moonlight</span>
+      <input name="choice-a1" value="moon" type="radio" class="form__control radio" />
+      <span class="form-choice__label">Moonlight</span>
     </label>
     <label class="control__label">
-      <input name="choice-a1" value="good" type="radio" class="form__control radio" /><span class="form-choice__label">Good times</span>
+      <input name="choice-a1" value="good" type="radio" class="form__control radio" />
+      <span class="form-choice__label">Good times</span>
     </label>
     <label class="control__label">
-      <input name="choice-a1" value="boogie" type="radio" class="form__control radio" /><span class="form-choice__label">Boogie</span>
+      <input name="choice-a1" value="boogie" type="radio" class="form__control radio" />
+      <span class="form-choice__label">Boogie</span>
     </label>
   </div>
 </fieldset>
@@ -97,7 +121,27 @@ You can configure this helper using the common helper options, the following opt
 To allow multiple options to be chosen (checkboxes instead of radios), add the `'multiple': true` option.
 
 <div className="d-example">
-  <fieldset className="form__group form-choice"><legend className="control__label">Assign blame to</legend><div className="controls"><label className="control__label"><input name="choice-a2" value="sun" type="checkbox" className="form__control checkbox" /><span className="form-choice__label">Sunshine</span></label><label className="control__label"><input name="choice-a2" value="moon" type="checkbox" className="form__control checkbox" /><span className="form-choice__label">Moonlight</span></label><label className="control__label"><input name="choice-a2" value="good" type="checkbox" className="form__control checkbox" /><span className="form-choice__label">Good times</span></label><label className="control__label"><input name="choice-a2" value="boogie" type="checkbox" className="form__control checkbox" /><span className="form-choice__label">Boogie</span></label></div></fieldset>
+  <fieldset className="form__group form-choice">
+    <legend className="control__label">Assign blame to</legend>
+    <div className="controls">
+      <label className="control__label">
+        <input name="choice-a2" value="sun" type="checkbox" className="form__control checkbox" />
+        <span className="form-choice__label">Sunshine</span>
+      </label>
+      <label className="control__label">
+        <input name="choice-a2" value="moon" type="checkbox" className="form__control checkbox" />
+        <span className="form-choice__label">Moonlight</span>
+      </label>
+      <label className="control__label">
+        <input name="choice-a2" value="good" type="checkbox" className="form__control checkbox" />
+        <span className="form-choice__label">Good times</span>
+      </label>
+      <label className="control__label">
+        <input name="choice-a2" value="boogie" type="checkbox" className="form__control checkbox" />
+        <span className="form-choice__label">Boogie</span>
+      </label>
+    </div>
+  </fieldset>
 </div>
 
 <Tabs
@@ -258,7 +302,7 @@ If there are more than five options, the choice helper will automatically switch
 
 
 <div className="d-example">
-  <div className="form__group form-choice"><label className="control__label">Highlight colour</label><div className="controls"><select class="form__control select js-select2"><option value="red">Red</option><option value="orange">Orange</option><option value="yellow">Yellow</option><option value="green">Green</option><option value="blue">Blue</option><option value="indigo">Indigo</option><option value="violet">Violet</option></select></div></div>
+  <div className="form__group form-choice"><label className="control__label">Highlight colour</label><div className="controls"><select className="form__control select js-select2"><option value="red">Red</option><option value="orange">Orange</option><option value="yellow">Yellow</option><option value="green">Green</option><option value="blue">Blue</option><option value="indigo">Indigo</option><option value="violet">Violet</option></select></div></div>
 </div>
 
 <Tabs
