--- a/docs/docs/forms/text.mdx
+++ b/docs/docs/forms/text.mdx
@@ -11,7 +11,7 @@ Generates a text input field allowing users to input data, with a variety of opt
 
 <div className="d-example">
   <div className="form__group">
-    <label for="guid-1303170267" className="control__label">My label</label>
+    <label htmlFor="guid-1303170267" className="control__label">My label</label>
     <div className="controls">
       <input id="guid-1303170267" name="text-1" type="text" className="form__control" />
     </div>
